implemented post for product needs added tests
